--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-"Hello World"
+<!doctype html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Robert's Dingy Lil' Website</title>
+  </head>
+  <body>
+  </body>
+</html>
