--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
     <title>Robert's Dingy Lil' Website</title>
   </head>
   <body>
+    <p>Welcome to my dingy little page</p>
+    <p>Coming soon...</p>
+        <ul>
+            <li>my bio!</li>
+            <li>my projects!</li>
+            <li>my contact info!</li>
+            <li>and more! (if i am not lazy.)</li>
+        </ul>
   </body>
 </html>
