added some dead links and messed with formatting on main page

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Robert's Dingy Lil' Website</title>
   </head>
   <body>
-    <p>Welcome to my dingy little page</p>
+    <h1>Welcome to my dingy little page</h1>
     <p>Coming soon...</p>
         <ul>
-            <li>my bio!</li>
-            <li>my projects!</li>
-            <li>my contact info!</li>
+            <a href="pages/bio.html">my bio!</a>
+            <a a href="pages/projects.html">my projects!</a>
+            <a a href="pages/contact.html">my contact info!</a>
             <li>and more! (if i am not lazy.)</li>
         </ul>
+        <img src="images/Smile.jpg" alt="A toothy grin" width="48" height="27" title="what's up doc?">
   </body>
 </html>
